# gsein-war3

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  PROJECT_NOTES.md  README.md  build.gradle.kts  project.clj  settings.gradle.kts
.claude/: agent-policy.md  loop.md
.claude/skills/create-github-issue/: SKILL.md
.claude/skills/worktree-commit-pr-workflow/: SKILL.md
.claude/skills/worktree-merge-cleanup-workflow/: SKILL.md
.claude/skills/worktree-review-fix-workflow/: SKILL.md
.github/workflows/: release.yml
clojure/: project.clj
clojure/py/text/: text_colorizer.py
clojure/resources/: balance-ids.edn  cli-commands.edn  general-skill-config.edn
clojure/resources/mdx/: template.mdx
clojure/resources/templates/: 任务物品.ini  加攻击速度物品技能.ini  装饰物.ini  造塔技能.ini
clojure/src/gsein_war3/: config.clj  core.clj
clojure/test/gsein_war3/: core_test.clj
doc/: intro.md
doc/notes/: 2026-05-11-war3-vue-react-tauri-unified-eich.md  TODO.md
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.vue  main.ts
frontend/src/api/: clojure.ts  dialog.ts  tauri.ts
frontend/src/components/: GwIcon.vue
resources/: config.edn
resources/mdx/: template.mdx
resources/templates/: NPC.ini  兑换物品.ini  加生命值物品技能.ini  加移动速度物品技能.ini  加防御力物品技能.ini  单位基础.ini  美食.ini  英雄塔.ini  装备物品.ini  通魔.ini  造塔物品.ini  食材.ini
scripts/: build.bat
src/gsein_war3/: config.clj  core.clj
tauri/: Cargo.toml  tauri.conf.json
tauri/capabilities/: default.json
tauri/src/: commands.rs  config.rs  main.rs
test/gsein_war3/: core_test.clj
(+85 files in other folders)
