[package]
name = "gsein-war3"
version = "0.1.0"
description = "Warcraft 3 map development tool suite"
authors = ["lhing17"]
edition = "2021"

[[bin]]
name = "gsein-war3"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
